--- a/components.json
+++ b/components.json
@@ -12,10 +12,10 @@
   },
   "aliases": {
     "components": "@/components",
-    "utils": "@/features/@shared/components/utils",
-    "ui": "@/features/@shared/components/ui",
-    "lib": "@/features/@shared/components/lib",
-    "hooks": "@/features/@shared/components/hooks"
+    "utils": "@/utils",
+    "ui": "@/components/ui",
+    "lib": "@/lib",
+    "hooks": "@/hooks"
   },
   "iconLibrary": "lucide"
 }
